# python-bsdl-parser

./: .gitignore  Makefile  README.md  bsdl.ebnf  bsdl2json.py  requirements.txt  setup.cfg  setup.py  std_1149_1_2013.ebnf
bsdl_parser/: __main__.py  bsdl2json.py  bsdl_attributes.py  fast_bsdl_parser.py
