[metadata]
name            = bsdl-parser
author          = Forest Crossman, Benedek Racz
author-email    = betontalpfa@gmail.com
summary         = BSDL parser for python
description-file = README.md
long-description-content-type = text/markdown
requires-python = >=3.4
project_urls =
    Source Code = https://github.com/raczben/python-bsdl-parser
license = ISC
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
	Operating System :: OS Independent
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
keywords =
    bsdl, boundary scan descriptor language, parser

[options.extras_require]
test =
    twine
    pylint
build =
    pbr
